5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1675_1949.log
== TEST (2019-05-02 12:38:37) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x//1)*10

y1 = y - (y //10)*10
y2 = y - (y //1)*10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:39:19) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x//1)*10

y1 = y - (y //10)*10
y2 = y - (y //1)*10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
-495
5
-495
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:40:06) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x//1)

y1 = y - (y //10)*10
y2 = y - (y //1)

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
0
5
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:40:25) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x//1)*1

y1 = y - (y //10)*10
y2 = y - (y //1)*1

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
0
5
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:41:28) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x//10)*1

y1 = y - (y //10)*10
y2 = y - (y //10)*1

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
50
5
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:43:10) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x%10)*1

y1 = y - (y //10)*10
y2 = y - (y %10)*1

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
50
5
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:43:41) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x//10)%1

y1 = y - (y //10)*10
y2 = y - (y//10)%1

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
55
5
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:44:58) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x//10)%10

y1 = y - (y //10)*10
y2 = y - (y//10)%10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
50
5
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:45:23) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x//10)

y1 = y - (y //10)*10
y2 = y - (y//10)

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
50
5
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:48:30) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x//1)*10

y1 = y - (y //10)*10
y2 = y - (y//1)*10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
-495
5
-495
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:48:58) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - ((x//1)*10)

y1 = y - (y //10)*10
y2 = y - ((y//1)*10)

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
-495
5
-495
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:55:50) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x/1)*10

y1 = y - (y //10)*10
y2 = y - (y/1)*10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
-495.0
5
-495.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:56:05) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x%1)*10

y1 = y - (y //10)*10
y2 = y - (y%1)*10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
55
5
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:56:27) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x%1)

y1 = y - (y //10)*10
y2 = y - (y%1)

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
55
5
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:56:50) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x%1)

y1 = y - (y //10)*10
y2 = y - (y%10)

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
55
5
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:57:16) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x//10)*10
x2 = x - (x%1)//10

y1 = y - (y //10)*10
y2 = y - (y%10)//10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
55
5
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:58:41) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x - (x //10)*100

y1 = y - (y //10)*10
y2 = y - (y //10)*100

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
-445
5
-445
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:59:01) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x - (x //10)*10

y1 = y - (y //10)*10
y2 = y - (y //10)*10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
5
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:59:49) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x - (x //1)*10

y1 = y - (y //10)*10
y2 = y - (y //1)*10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
-495
5
-495
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:01:07) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x - (x //10)%10

y1 = y - (y //10)*10
y2 = y - (y //10)%10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
50
5
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:01:26) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x - (x //10)%100

y1 = y - (y //10)*10
y2 = y - (y //10)%100

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
50
5
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:01:41) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x - (x //100)%100

y1 = y - (y //10)*10
y2 = y - (y //100)%100

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
55
5
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:01:55) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x - (x //100)%10

y1 = y - (y //10)*10
y2 = y - (y //100)%10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
55
5
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:02:56) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x //10

y1 = y - (y //10)*10
y2 = (y //10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- ERROR:
File "XXXX", line 10
    if(x == y):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:03:10) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x //10

y1 = y - (y //10)*10
y2 = (y //10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- ERROR:
File "XXXX", line 10
    if(x == y):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:03:14) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x //10

y1 = y - (y //10)*10
y2 = y //10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- OUTPUT:
Ganhou R$ 100.000,00
5
5
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:03:23) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x //10

y1 = y - (y //10)*10
y2 = y //10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- EXECUTION TIME:
0.15486
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
5
5
5
5
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
8
7
9
8
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
2
1
6
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:03:26) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x //10

y1 = y - (y //10)*10
y2 = y //10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	
print(x1)
print(x2)
print(y1)
print(y2)
-- EXECUTION TIME:
0.170299
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
5
5
5
5
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
8
7
9
8
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
2
1
6
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:03:30) 
-- CODE:
x = int(input("numero de dois digitos:"))
y = int(input("numero sorteado na loteria:"))

x1 = x - (x //10)*10
x2 = x //10

y1 = y - (y //10)*10
y2 = y //10

if(x == y):
	print("Ganhou R$ 100.000,00")
elif(x1 == y1) or (x1 == y2) or (x2 == y1) or (x2 == y2):
	print("Ganhou R$ 1.000,00")
elif(x1 == y2) and (x2 == y1):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
	

-- EXECUTION TIME:
0.183073
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
